# caca

./: .gitignore  Cargo.toml  README.md
.config/: caca.ini
caca/: Cargo.toml
caca/src/: admin.rs  config.rs  main.rs  metadata.rs  view.rs
caca/src/client/: handler.rs  mod.rs  popo.rs
caca/src/repo/: feed.rs  id.rs  mod.rs  util.rs
caca/theme/: atom.xml.html  base.html  blob.html  commit.html  global_atom.xml.html  index.html  log.html  macros.html  refs.html  repo.html  summary.html  tree.html  www.html
resources/: caiodotco-live-config.ini
urso/: Cargo.toml
urso/src/: error.rs  lib.rs  mime.rs
urso/src/blame/: lines.rs  mod.rs
urso/src/diff/: mod.rs  sink.rs
urso/src/rename/: mod.rs
