[package]
name = "caca"
version = "0.1.0"
edition = "2021"

[dependencies]
urso = { path = "../urso" }
tracing = { workspace = true }
serde = { version = "1.0", default-features = false, features = ["derive", "rc"] }

rayon = { version = "1.10", default-features = false }
axum = { version = "0.7.5", default-features = false, features = ["tracing", "http1", "tokio"] }
tokio = { version = "1.38.0", default-features = false, features = ["net", "fs", "time"] }
tokio-util = { version = "0.7.11", default-features = false, features = ["io-util"] }

markdown = { version = "1.0.0-alpha.17", default-features = false }
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["env-filter", "registry", "fmt", "ansi"] }
rand = { version = "0.8.5", default-features = false }
tower = { version = "0.4.13", default-features = false }
tower-http = { version = "0.5.2", default-features = false, features = ["trace", "limit"] }
lru = { version = "0.12.3", default-features = false }
minijinja = { version = "2.0.1", default-features = false, features = ["loader", "multi_template", "builtins", "macros"] }
notify = { version = "6.1.1", default-features = false, features = ["fsevent-sys", "macos_fsevent"] }
listenfd = { version = "1.0.1", default-features = false }
chrono = { version = "0.4.38", default-features = false, features = ["serde"] }
chrono-humanize = { version = "0.2.3", default-features = false }
url = { version = "2.5.0", default-features = false }

[dev-dependencies]
serde_test = "1.0.176"
