[package]
name = "urso"
version = "0.1.0"
edition = "2021"

[dependencies]
gix = { version = "0.58.0", default-features = false, features = ["revision", "blob-diff", "mailmap", "parallel"] }
tracing = { workspace = true }
mime_guess = { version = "2.0.4", default-features = false }
infer = { version = "0.15.0", default-features = false }
